Minor formatting and textual adjustments

--- a/PR1/PR1.tex
+++ b/PR1/PR1.tex
@@ -17,6 +17,7 @@
 \usepackage{bm}
 \usepackage[backend=bibtex]{biblatex}
 \addbibresource{PR1.bib}
+\PassOptionsToPackage{hidelinks}{hyperref}
 
 \newcommand{\uvec}[1]{\boldsymbol{\hat{\textbf{#1}}}}
 
