--- a/PR1/appendix.tex
+++ b/PR1/appendix.tex
@@ -28,3 +28,41 @@
 \centering\includegraphics[width=0.45\textwidth]{./img/plot/gyro/Gyro_Z-axis.png}
 \end{minipage}
 \vfill{}
+
+\clearpage
+\chapter{}\label{apdx:C}
+\vfill{}
+\begin{figure}[h!]
+  \hspace{2.5em}\includegraphics[width=0.75\textwidth]{./img/Section_4_2_2.jpeg}
+\end{figure}
+\vfill{}
+
+\clearpage
+\chapter{}\label{apdx:D}
+\vfill{}
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[width=\textwidth]{./img/Section_4_2_2_1.jpeg}
+  \end{center}
+\end{figure}
+\vfill{}
+
+\clearpage
+\chapter{}\label{apdx:E}
+\vfill{}
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[width=\textwidth]{./img/Section_4_2_2_2.jpeg}
+  \end{center}
+\end{figure}
+\vfill{}
+ 
+\clearpage
+\chapter{}\label{apdx:F}
+\vfill{}
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{./img/Section_4_2_2_3.jpeg}
+  \end{center}
+\end{figure}
+\vfill{}
