--- a/CP/content.tex
+++ b/CP/content.tex
@@ -26,15 +26,15 @@ The following is a summary of the milestones achieved in the project so far:
         \item \textbf{Attitude Estimation}: Implemented attitude estimation using unit quaternion rotation, which provided accurate real-time orientation data of the rocket.
         \item \textbf{Velocity Estimation}: Developed a Kalman Filter model for velocity estimation, which enhanced the precision of velocity measurements by fusing data from multiple sensors.
     \end{itemize}
-    \item \textbf{Design of A3 Firmware Structure}:
-\begin{itemize}    
-    \item \textbf{RTOS Task Planning}: Designed a high level RTOS architecture to efficiently manage time-critical tasks and handle the increased complexity of the system. This architecture ensures precise time management between different subsystems, allowing for the prioritisation of tasks and seamless integration of additional features as the firmware evolves. 
-\end{itemize}
     \item \textbf{Aurora II Launch Outcomes}:
     \begin{itemize}
         \item \textbf{Barometric Data Collection}: Adjusted avionics A1 firmware to ensure correct collection and storage of barometric data, addressing issues identified during the Aurora I launch.
         \item \textbf{Telemetry Testing}: Conducted preliminary telemetry tests using ground communication hardware for real-time data transmission in future launches.
     \end{itemize}
+    \item \textbf{Aurora III Firmware Structure}:
+\begin{itemize}    
+    \item \textbf{RTOS Task Planning}: Designed a high level RTOS architecture to efficiently manage time-critical tasks and handle the increased complexity of the system. This architecture ensures precise time management between different subsystems, allowing for the prioritisation of tasks and seamless integration of additional features as the firmware evolves. 
+\end{itemize}
     \item \textbf{RTOS Implementation for Aurora III }:
     \begin{itemize}
         \item \textbf{High-Resolution Task}: Implemented a high-resolution task for capturing and processing sensor data at a frequency of 500Hz.
@@ -56,69 +56,117 @@ This section details the remaining tasks required to complete the capstone proje
 \begin{figure}
     \centering
     \includegraphics[width=1\linewidth]{img/RTOS-task-hierarchy.png}
-    \caption{Enter Caption}
+    \caption{Avionics RTOS Task Hierarchy}
     \label{fig:enter-label}
 \end{figure}
 
 \subsection{Task 1: Finish Communications Tasks}
 \textbf{Activity}: This task involves finalising the communication systems, specifically managing the LoRa and CAN protocols. The activities include adding and receiving messages from buffer queues to ensure data transmission and reception between the rocket's avionics system and ground stations or other subsystems. 
 
-\textbf{Timeline/Expected Completion}: Week 4-5
+\textbf{Timeline}: Week 4-5
+
+\textbf{Expected Completion Date}: 23rd August 2024
+
+\textbf{Feedback Date}: 21st of August 2024
 
 \subsection{Task 2: Implement UART Tasks}
 \textbf{Activity}: Implement UART tasks to enable command and control functionalities. This includes developing UART command implementations for testing purposes and retrieving data from flash storage. Additionally, it involves manually setting states for debugging to ensure accurate system behaviour during various flight conditions. 
 
-\textbf{Timeline/Expected Completion}: Week 4-5
+\textbf{Timeline}: Week 4-5
+
+\textbf{Expected Completion Date}: 23rd August 2024
+
+\textbf{Feedback Date}: 21st of August 2024
 
 \subsection{Task 3: Verify Data from Flash}
 \textbf{Activity}: Ensure that the message buffer does not interfere with the written data. This task involves verifying that the data readout from flash storage is valid and is not corrupted due to buffering issues or context switching from the RTOS. The aim is to confirm the integrity and sensibility of the stored data. 
 
-\textbf{Timeline/Expected Completion}: Week 4-5
+\textbf{Timeline}: Week 4-5
 
-\subsection{Task 4: Verify RTOS Task Execution}
-\textbf{Activity}: Conduct thorough verification to ensure that all RTOS tasks are executing as scheduled. This involves monitoring the execution times and sequences of tasks to confirm that they adhere to the predefined schedule and priorities. 
+\textbf{Expected}: 23rd August 2024
 
-\textbf{Timeline/Expected Completion}: Week 5-6
+\textbf{Feedback Date}: 21st of August 2024
 
-\subsection{Task 5: Implement GPS}
+\subsection{Task 4: Implement GPS}
 \textbf{Activity}: Implement the GPS task, utilising drivers already prepared by the Avionics, Ground Communications and Redundant Systems team. This task includes handling GPS data and ensuring it is correctly processed and sent to the LoRa communication system. Additionally, it involves setting up the GPS to operate in a non-blocking state, as it outputs a significant amount of data that is not required. 
 
-\textbf{Timeline/Expected Completion}: Week 4-5
+\textbf{Timeline}: Week 4-5
 
-\subsection{Task 6: Sensor Calibration}
+\textbf{Expected Completion Date}: 23rd August 2024
+
+\textbf{Feedback Date}: 21st of August 2024
+
+\subsection{Task 5: Sensor Calibration}
 \textbf{Activity}: Perform calibration of all sensors used in the rocket's avionics system. This ensures accurate readings and data integrity during flight. Calibration activities include setting up the sensors in a controlled environment recording any offsets that any of the sensors may output.
 
-\textbf{Timeline/Expected Completion}: Week 5
+\textbf{Timeline}: Week 5
 
-\subsection{Task 7: Implement Communications with Payload}
+\textbf{Expected Completion Date}: 23rd August 2024
+
+\textbf{Feedback Date}: 21st of August 2024
+
+\subsection{Task 6: Implement Communications with Payload}
 \textbf{Activity}: Develop, implement and test communication protocols between the avionics system and the payload subsystem. This ensures that critical data is shared and processed accurately between these systems during flight. 
 
-\textbf{Timeline/Expected Completion}: Week 5
+\textbf{Timeline}: Week 5
 
-\subsection{Task 8: Health Monitoring Task}
+\textbf{Expected Completion Date}: 23rd August 2024
+
+\textbf{Feedback Date}: 21st of August 2024
+
+\subsection{Task 7: Health Monitoring Task}
 \textbf{Activity:} Develop a high-priority health monitoring task designed to ensure system health by actively monitoring the status of various avionics components. This task will wait for flags triggered by other tasks, such as sensor malfunctions or microcontroller failures. If a flag is set, the health monitoring task will immediately enter a RTOS critical section with top priority, executing predefined protocols to mitigate the issue. These protocols include switching to redundant sensors or microcontrollers to maintain system functionality. Additionally, the task will manage timeouts on polling to prevent unnecessary delays and will monitor conditions such as the flash buffer reaching capacity. 
 
-\textbf{Timeline/Expected Completion}: Week 5
+\textbf{Timeline}: Week 5
+
+\textbf{Expected Completion Date}: 23rd August 2024
+
+\textbf{Feedback Date}: 21st of August 2024
+
+\subsection{Task 8: Verify RTOS Task Execution}
+\textbf{Activity}: Conduct thorough verification to ensure that all RTOS tasks are executing as scheduled. This involves monitoring the execution times and sequences of tasks to confirm that they adhere to the predefined schedule and priorities. 
+
+\textbf{Timeline}: Week 5-7
+
+\textbf{Expected Completion Date}: 13th of September 2024
+
+\textbf{Feedback Date}: 18th of September 2024
 
 \subsection{Task 9: Analyse Impact of Sample Loss}
 \textbf{Activity}: Analyse the effect of senor data loss during errors and determine if the calculated state can recover from such loss. This involves creating scenarios where data samples are lost and observing the system's ability to maintain state estimation. 
 
-\textbf{Timeline/Expected Completion}: Week 5-6
+\textbf{Timeline}: Week 5 - Mid Semester Break
+
+\textbf{Expected Completion Date}: 6th of September 2024
+
+\textbf{Feedback Date}: 11th of September 2024
 
 \subsection{Task 10: Verify Kalman Gain as an Indicator}
 \textbf{Activity}: Validate the use of Kalman gain as an indicator for system performance. This involves checking the accuracy of the Kalman gain values during different flight conditions and validating they provide meaningful insights. 
 
-\textbf{Timeline/Expected Completion}: Week 5-6
+\textbf{Timeline}: Week 5 - Mid Semester Break
+
+\textbf{Expected Completion Date}: 6th of September 2024
+
+\textbf{Feedback Date}: 11th of September 2024
 
 \subsection{Task 11: Design Error Determination for Redundancy}
 \textbf{Activity}: Design logic for error determination to support redundancy. This involves creating algorithms that detect errors and switch to redundant sensors and microcontrollers to maintain functionality. 
 
-\textbf{Timeline/Expected Completion}: Week 5-6
+\textbf{Timeline/Expected Completion}: Week 5 - Mid Semester Break
 
-\subsection{Task 12: Dissimilar Sensor Configuration for A5}
+\textbf{Expected Completion Date}: 6th of September 2024
+
+\textbf{Feedback Date}: 11th of September 2024
+
+\subsection{Task 12: Dissimilar Sensor Configuration for Aurora V Hardware}
 \textbf{Activity}: Configure and test dissimilar sensors to ensure they provide accurate data as per the primary suite of sensors. This involves configuring sensors with different specifications and integrating them into the system.
 
-\textbf{Timeline/Expected Completion}: Week 5
+\textbf{Timeline}: Week 5
+
+\textbf{Expected Completion Date}: 23rd August 2024
+
+\textbf{Feedback Date}: 21st of August 2024
 
 \subsection{Task 13: Testing and Validation of Sensors and System Testing}
 \textbf{Activity}: This task involves conducting comprehensive testing and validation of all sensors ensuring that each component performs accurately under expected flight conditions. The testing procedures will include the use of laboratory equipment such as shake tables and a vacuum chamber for barometric sensors. By doing so, conditions can be simulated to verify RTOS tasks. 
@@ -128,7 +176,6 @@ This section details the remaining tasks required to complete the capstone proje
     \item \textbf{Accelerometer Testing}: The accelerometers will be subjected to high and low G-force tests using a shake table. This will verify that the sensor outputs are proportional to the applied vibrations across the expected operating range. 
     \item \textbf{Gyroscope Testing}: Gyroscopes will be tested using a driving simulator to validate their outputs are proportional to known rotation rates. A bias stability test will measure the drift over time, ensuring it remains within acceptable limits.
     \item \textbf{Barometer Testing}: Barometric sensors will undergo pressure validation in a vacuum chamber to simulate the pressure changes expected at an apogee of 7,000 feet. This includes verifying the accuracy of pressure readings against a Blue Raven flight computer. Additionally, temperature validation will be conducted in a temperature-controlled chamber to ensure the sensor compensates for temperature variations.
-    \item \textbf{Magnetometer Testing}: Magnetometers will be calibrated outdoors, with readings compared against known magnetic field values to ensure accuracy.
     \item \textbf{GPS Testing}: The GPS will undergo stationary and dynamic accuracy tests. The stationary test will verify the GPS maintains stable position data in a fixed location, while the dynamic test will ensure it accurately tracks movement, such as on a moving vehicle.
 \end{itemize}
 
@@ -139,17 +186,29 @@ This section details the remaining tasks required to complete the capstone proje
     \item \textbf{Recovery Deployment}: The recovery system will be tested to ensure they deploy correctly at apogee. Indicators like LEDs will be used as a test to confirm that the recovery is triggered at the correct time before recovery is connected to avionics. 
 \end{itemize}
 
-\textbf{Timeline/Expected Completion}: Week 6-11
+\textbf{Timeline}: Week 6-11
+
+\textbf{Expected Completion Date}: 13th of October 2024 (all testing)
+
+\textbf{Feedback Date}: 16th of October 2024
 
 \subsection{Task 14: Redundancy Testing}
 \textbf{Activity}: Conduct hardware-level testing to verify the redundancy mechanisms. This involves working closely with Avionics, Ground Communications and Redundant Systems team to design and implement tests that test the redundant systems function correctly in case of primary system failures. 
 
-\textbf{Timeline/Expected Completion}: Week 5-6
+\textbf{Timeline}: Week 5-7
+
+\textbf{Expected Completion Date}: 13th of September 2024
+
+\textbf{Feedback Date}: 18th of September 2024
 
 \subsection{Task 15: Documentation of Firmware}
 \textbf{Activity}: Document all firmware developed for the project, including detailed descriptions of functionalities, configurations, and usage instructions through Doxgyen. This ensures that future teams or stakeholders can understand and utilise the firmware effectively. 
 
-\textbf{Timeline/Expected Completion}: Week 1-11
+\textbf{Timeline}: Week 1-11
+
+\textbf{Expected Completion Date}: 20th of October 2024 
+
+\textbf{Feedback Date}: 16th of October 2024
 
 \clearpage 
 \begin{landscape}
@@ -158,7 +217,7 @@ This section details the remaining tasks required to complete the capstone proje
     \centering
     \includegraphics[width=\paperheight, height=\paperwidth, keepaspectratio]{img/Gantt-Chart-CP.png} 
     \caption{Gantt Chart - Project Timeline}
-    \label{fig:gantt-chart}
+    \label{fig:Gantt Chart}
 \end{figure}
 \end{landscape}
 
@@ -181,4 +240,6 @@ Access to specialised laboratory equipment, such as shake tables and vacuum cham
 \subsection{Code Bugs and Unexpected RTOS Behaviour}
 Potential code bugs and unexpected RTOS behaviour pose significant risks, especially close to launch dates. Early testing procedures of the RTOS code will be conducted to identify and resolve issues before they become critical. Regular consultations with project supervisor Dr. Glenn Matthews provide expert guidance on complex issues. Debugging protocols, including RTOS live debugging tools, systematic code reviews, and peer testing, are in place to address any problems, reducing the likelihood of significant delays.
 
+\subsection{Availability of Avionics Hardware for Development}
+Another significant challenge anticipated during the remainder of the project is the potential limited availability of the Avionics boards, which could impact the upcoming Aurora IV and Aurora V launches. During the Aurora III development of firmware, the team faced a similar issue, where they were reliant on the Avionics, Ground Communications, and Redundant Systems team to provide the necessary hardware. With only one Aurora III board available, the delay in receiving this avionics board reduced the time available for development and testing which ultimately resulted in unreliable features. This constrained testing period limited the ability to identify and resolve issues before the launch. To mitigate similar challenges for Aurora IV and Aurora V launches, the team will proactively coordinate with the relevant teams to ensure earlier access to the hardware. Additionally, the project timeline has been adjusted to prioritise critical tasks. These measures aim to minimise the impact of hardware availability constraints on the rocket's success. 
 
